--- a/ActiveWindowsExplorer/ActiveWindowsExplorer.csproj
+++ b/ActiveWindowsExplorer/ActiveWindowsExplorer.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\WinApi\RECT.cs" />
+    <Compile Include="UI\WindowDetailsView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\WindowDetailsView.Designer.cs">
+      <DependentUpon>WindowDetailsView.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\WindowsListView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -78,6 +84,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\WindowDetailsView.resx">
+      <DependentUpon>WindowDetailsView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\WindowsListView.resx">
       <DependentUpon>WindowsListView.cs</DependentUpon>
     </EmbeddedResource>
