--- a/ActiveWindowsExplorer/ActiveWindowsExplorer.csproj
+++ b/ActiveWindowsExplorer/ActiveWindowsExplorer.csproj
@@ -50,11 +50,11 @@
     <Compile Include="Core\WindowInfo.cs" />
     <Compile Include="Core\WindowsExplorer.cs" />
     <Compile Include="Core\WindowsManager.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="UI\MainView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="UI\MainView.Designer.cs">
+      <DependentUpon>MainView.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,8 +71,8 @@
     <Compile Include="UI\WindowsListView.Designer.cs">
       <DependentUpon>WindowsListView.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="UI\MainView.resx">
+      <DependentUpon>MainView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
